--- a/GLWECiphertexttoPlaintextMultiplication.html
+++ b/GLWECiphertexttoPlaintextMultiplication.html
@@ -90,7 +90,7 @@ decrypting it yields <!-- l. 36 --><math display='inline' xmlns='http://www.w3.o
 by using <!-- l. 72 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>S</mi></math>, then we
 get the plaintext <!-- l. 72 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi mathvariant='normal'>Λ</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mi>M</mi></mrow></math>.
 Meanwhile, <!-- l. 72 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msubsup><mrow><mi>A</mi></mrow><mrow><mn>0</mn></mrow><mrow><mi>′</mi></mrow></msubsup><mo class='MathClass-punc' stretchy='false'>,</mo><msubsup><mrow><mi>A</mi></mrow><mrow><mn>1</mn></mrow><mrow><mi>′</mi></mrow></msubsup><mo class='MathClass-punc' stretchy='false'>,</mo><mo class='MathClass-punc' stretchy='false'>.</mo><mo class='MathClass-punc' stretchy='false'>.</mo><mo class='MathClass-punc' stretchy='false'>.</mo><mstyle class='text'><mtext> </mtext></mstyle><msubsup><mrow><mi>A</mi></mrow><mrow><mi>k</mi><mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow><mrow><mi>′</mi></mrow></msubsup><mo class='MathClass-punc' stretchy='false'>,</mo><msup><mrow><mi>E</mi></mrow><mrow><mi>′</mi></mrow></msup></mrow></math>
-get eliminated by rounding during decryption, regardless of whatever their values were randomly sampled
+get eliminated by decryption (with rounding), regardless of whatever their values were randomly sampled
 during encryption.
 </p><!-- l. 74 --><p class='indent'>   The noise is a bigger problem now, because after decryption, the original ciphertext <span class='rm-lmss-10x-x-109'>ct</span>’s noise has increased
 from <!-- l. 74 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>E</mi></math> to
